# mgl849-lab2

./: .clang-tidy  .gitignore  CMakeLists.txt  makefile  readme.md
include/: config.h  container_of.h  decision_engine.h  led_matrix.h  metrics.h  parser.h  queue.h  shared_data.h  socket.h  tasks.h
include/control/: decision_engine.h
include/display/: led_matrix.h
include/drivers/: i2c.h
include/metrics/: metrics.h
include/network/: socket.h
src/: main.c  parser.c  queue.c  shared_data.c
src/control/: decision_engine.c
src/display/: led_matrix.c
src/network/: socket.c
src/ressources/: decision.c  matrix.c  metrics.c  parser.c  shared_data.c  socket.c
src/tasks/: task_decision.c  task_display.c  task_metrics.c  task_receiver.c
